Kleopatra: Missing error handling when changing expiry
Testing, NormalPublic

Assigned To
Authored By
aheinecke
Mar 7 2019, 10:42 AM

Description

In Kleopatra when you change the expiry of a Key and enter a wrong passphrase or cancel the pinentry it still reports a success.

Details

Version
master

Revisions and Commits

Event Timeline

aheinecke added a subscriber: huowen.

From a comment in T3990

Hi,aheinecke。my kleopatra version is "kleopatra Version 3.1.4-gpg4win-3.1.5".and when change expiry date, i enter a wrong passphrase or choose "cancle". it shows successfully. what can i do for solve this question. thanks.

Hello,

I'm not sure yet where the bug lives. It's either in GPGME's editkeyinteractor that ignores the error / cancel or in Kleopatra itself. I'll have to look into it. Btw. I do not think that this should have high priority because it is not a new regression and while it is a Bug and wrong it is not really harmful.

If you want to fix it yourself the first step would probably be to compile Kleopatra / GPGME for a developer version. This is very complicated. There is documentation for this in https://dev.gnupg.org/source/gpg4win/browse/master/README but you will need a debian linux system for it.

Best Regards,
Andre

This comment was removed by huowen.
aheinecke added a subscriber: werner.

@werner This issue also applies to GPA. Looking at the edit key interface I can't see how we can handle this. Am I overlooking something or do we just loose the error information / is it not emited by gnupg?

Hello,
when can we fix it?

Best wishes
Huo

Werner: I'm assigning this to you. Because the underlying reason is a missing status from gpg. I think we should add that for 2.3 as any new status line tends to break things.

ikloecker added a subscriber: ikloecker.

Taking: Still does not work although now --quick-set-expire is used by gpgme.

ikloecker changed the task status from Open to Testing.Aug 14 2020, 12:01 PM
ikloecker reassigned this task from ikloecker to aheinecke.

Fixed.